change min/max versions in multi-block UI to textfield

--- a/src/olympia/blocklist/templates/blocklist/multiple_block.html
+++ b/src/olympia/blocklist/templates/blocklist/multiple_block.html
@@ -67,6 +67,11 @@
         </ul>
       </div>
     </div>
+    {% if form.non_field_errors %}
+    <div class="form-row">
+      {{ form.non_field_errors }}
+    </div>
+    {% endif %}
     <div class="form-row">
       <div>
         {{ form.min_version.errors }}
