--- a/src/olympia/scanners/templates/admin/scannerresult_action.html
+++ b/src/olympia/scanners/templates/admin/scannerresult_action.html
@@ -1,15 +1,15 @@
 {% load i18n admin_urls %}
 
 {% if obj.can_report_feedback %}
-  <a class="button" href="{% url 'admin:scanners_scannerresult_handlefalsepositive' obj.pk %}">
+  <button class="button" formaction="{% url 'admin:scanners_scannerresult_handlefalsepositive' obj.pk %}">
     Report as false positive
-  </a>
+  </button>
   &nbsp;
-  <a class="button default" href="{% url 'admin:scanners_scannerresult_handletruepositive' obj.pk %}">
+  <button class="button default" formaction="{% url 'admin:scanners_scannerresult_handletruepositive' obj.pk %}">
     Mark as true positive
-  </a>
+  </button>
 {% elif obj.can_revert_feedback %}
-  <a class="button default" href="{% url 'admin:scanners_scannerresult_handlerevert' obj.pk %}">
+  <button class="button default" formaction="{% url 'admin:scanners_scannerresult_handlerevert' obj.pk %}">
     Revert report
-  </a>
+  </button>
 {% endif %}
