--- a/src/olympia/scanners/templates/admin/scanners/scannerrule/change_form.html
+++ b/src/olympia/scanners/templates/admin/scanners/scannerrule/change_form.html
@@ -4,5 +4,5 @@
 {% block admin_change_form_document_ready %}
   {{ block.super }}
 
-  <script type="text/javascript" src="{% static 'js/scanners/scannerrule.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/scanners/scannerrule_change_form.js' %}"></script>
 {% endblock %}
