Improve display of buttons in DevHub
Display of buttons in DevHub improved for screen
width `@small`(newly defined) and `@medium`

--- a/static/css/devhub/new-landing/base.less
+++ b/static/css/devhub/new-landing/base.less
@@ -3,6 +3,7 @@
 
 // Grid
 @grid-max: 960px;
+@small: ~"only screen and (min-width: 550px)";
 @medium: ~"only screen and (min-width: 700px)";
 @large: ~"only screen and (min-width: 960px)";
 @notlarge: ~"only screen and (max-width: 959px)";
