Buttons made visible in DevHub mobile view (#12825)
* Buttons made visible in DevHub mobile view

fixes #12594

New Add-on and Theme buttons were not visible in mobile view.
The issue is corrected by removing display none property and
changing flex direction of container to column for device-
width less than 960px.

* Improve display of buttons in DevHub

Display of buttons in DevHub improved for screen
width `@small`(newly defined) and `@medium`

* Remove extra breakpoints

Remove new breakpoints defined in previous commit and
improve display of buttons.

* Remove flexbox and use floats

--- a/static/css/devhub/new-landing/sections/my-addons.less
+++ b/static/css/devhub/new-landing/sections/my-addons.less
@@ -116,10 +116,6 @@
 
 .DevHub-MyAddons-item-buttons {
   margin-top: 20px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
 }
 
 .DevHub-MyAddons-item-buttons-all {
@@ -129,16 +125,21 @@
 }
 
 .DevHub-MyAddons-item-buttons-submit {
-  display: none;
 
   margin-left: auto;
+  float: right;
 
   html[dir=rtl] & {
     margin-right: auto;
     margin-left: 0;
+    float: left;
   }
+}
 
-  @media @large {
-    display: inline;
+.DevHub-MyAddons-item-buttons-submit > .Button {
+  width: 100%;
+
+  @media @medium {
+    width: auto;
   }
 }
