add signoff approval and rejection

--- a/src/olympia/blocklist/templates/blocklist/block_submission_change_form.html
+++ b/src/olympia/blocklist/templates/blocklist/block_submission_change_form.html
@@ -11,8 +11,8 @@
         <input type="submit" value="{% trans 'Update' %}" class="default" name="_save">
     {% endif %}
     {% if has_signoff_permission and change %}
-      <input type="submit" value="{% trans 'Reject submission' %}" name="_reject">
-      <input type="submit" value="{% trans 'Approve submission' %}" name="_signoff">
+      <input type="submit" value="{% trans 'Reject Submission' %}" name="_reject">
+      <input type="submit" value="{% trans 'Approve Submission' %}" name="_signoff">
     {% endif %}
   </div>
 {% endblock %}
