Fixing #12753 * Reverting the changes in html * Adding 'width:100%;' to the #newsletter_error css

--- a/src/olympia/devhub/templates/devhub/new-landing/components/connect.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/connect.html
@@ -27,7 +27,7 @@
         <form class="DevHub-Connect-newsletter-form" id="newsletter_form" name="newsletter_form" action="https://www.mozilla.org/en-US/newsletter/" method="post" data-no-csrf>
           <input type="hidden" id="fmt" name="fmt" value="H">
           <input type="hidden" id="newsletters" name="newsletters" value="about-addons">
-          <div id="newsletter_errors" class="newsletter_errors"><br /></div>
+          <div id="newsletter_errors" class="newsletter_errors"></div>
 
           <div id="newsletter_email" class="form_group">
               <label for="email">{{ _('Email Address') }}</label>
