--- a/static/css/devhub/new-landing/sections/connect.less
+++ b/static/css/devhub/new-landing/sections/connect.less
@@ -128,6 +128,7 @@
         display: none; /* hide by default */
         margin-bottom: 10px;
         padding: 0 10px;
+        width: 100%;
 
         ul {
             list-style-type: disc;
