--- a/src/olympia/scanners/templates/admin/scanners/scannerresult/formatted_matched_rules_with_files.html
+++ b/src/olympia/scanners/templates/admin/scanners/scannerresult/formatted_matched_rules_with_files.html
@@ -13,7 +13,7 @@
     <td>
       {% for file in rule.files %}
         {% if addon_id %}
-          <a href="{% url 'files.list' addon_id 'file' file %}">{{ file }}</a>
+          <a href="{{ external_site_url }}{% url 'files.list' addon_id 'file' file %}">{{ file }}</a>
         {% else %}
           {{ file }}
         {% endif %}
